added container-1 html and css

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
                 <li>Sign In</li>
             </ul>
         </nav>
+        <div class="container-1">
+            <img src="images/illustration-1.svg" class="folder-of-information"  alt="A file of information">
+            <h2 class="container-1-h2">All your files in one secure location, accessible anywhere.</h2>
+            <p class="container-1-p">
+                Fylo stores your most important files in one secure location. 
+                Access them wherever you need, share and collaborate with friends, family, and co-workers.
+            </p>
+            <input type="email" placeholder="Enter your email" class="email-request">
+            <button class="container-1-btn">
+                <a href="#">Get Started</a>
+            </button>
+        </div>
         
 
 
