--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FYLO Landing Page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="parent-container">
         <nav class="primary-nav">
-            <img src="images/logo.svg" class="logo-img"  alt="FYLO Logo">
+            <img src="images/logo.svg" class="logo-img" alt="FYLO Logo">
             <ul class="primary-nav-ul">
                 <li>Features</li>
                 <li>Team</li>
@@ -23,22 +28,65 @@
             </ul>
         </nav>
         <div class="container-1">
-            <img src="images/illustration-1.svg" class="folder-of-information"  alt="A file of information">
+            <img src="images/illustration-1.svg" class="container-1-img" alt="A file of information">
             <h2 class="container-1-h2">All your files in one secure location, accessible anywhere.</h2>
             <p class="container-1-p">
-                Fylo stores your most important files in one secure location. 
+                Fylo stores your most important files in one secure location.
                 Access them wherever you need, share and collaborate with friends, family, and co-workers.
             </p>
-            <input type="email" placeholder="Enter your email" class="email-request">
+            <input type="email" placeholder="Enter your email..." class="email-request">
             <button class="container-1-btn">
                 <a href="#">Get Started</a>
             </button>
         </div>
-        
+        <div class="container-2">
+            <div class="curve">
+                <img src="images/bg-curve-mobile.svg" class="container-2-img1" alt="a curve">
+            </div>
+            <div class="subcontainer-2">
+                <img src="images/illustration-2.svg" class="container-2-img2" alt="remote presentations by individuals">
+                <h3 class="container-2-h3">Stay productive, wherever you are</h3>
+                <p class="subcontainer-2p">
+                    Never let location be an issue when accessing your files. Fylo has you covered for all of your file
+                    storage needs.
+                </p>
+                <br>
+                <p class="subcontainer-2p">
+                    Securely share files and folders with friends, family and colleagues for live collaboration. No
+                    email attachments required!
+                </p>
+                <p class="subcontainer-2p-arrow">
+                    See how Fylo works
+                    <span class="arrow"><img src="images/icon-arrow.svg" class="arrow-img" alt="arrow"></span>
+                </p>
+                <br>
+                <div class="sub-subcontainer2">
+                    <img src="images/icon-quotes.svg" class="icon-quotes" alt="quote">
+                    <br>
+                    <p class="sub-subcontainer2p">
+                        Fylo has improved our team productivity by an order of magnitude.
+                        Since making the switch our team has become a well-oiled collaboration machine.
+                    </p>
+                    <br>
+                    <div class="profile-details">
+                        <div class="profile-image">
+                            <img src="images/avatar-testimonial.jpg" class="profile-photo" alt="profile photo">
+                        </div>
+                        <div class="profile-info">
+                            <p class="avartar-name">Kyle Burton</p>
+                            <p class="avartar-role">Founder & CEO, Huddle</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
-        
+
+
+
     </div>
 </body>
+
 </html>
