added container-3 html and styled it

--- a/index.html
+++ b/index.html
@@ -80,13 +80,36 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
+        <div class="container-3">
+            <h3 class="container-3-h3">Get early access today</h3>
+            <p class="container-3-p">
+                It only takes a minute to sign up and our free starter tier is extremely generous. 
+                If you have any questions, our support team would be happy to help you.
+            </p>
+            <input type="email" name="email" id="email-container3" placeholder="email@example.com">
+            <button class="container-3-btn">
+                <a href="#">Get Started For Free</a>
+            </button>
+        </div>
     </div>
 </body>
+<footer>
+    <div class="container-4">
+        <img src="images/logo.svg" class="company-logo" alt="company logo">
+        <p> Phone: +1-543-123-4567</p>
+        <p>example@fylo.com</p>
+        <ul class="container-4-ul1">
+            <li>About Us</li>
+            <li>Jobs</li>
+            <li>Press</li>
+            <li>Blog</li>
+        </ul>
+        <ul class="container-4-ul2">
+            <li>Contact Us</li>
+            <li>Terms</li>
+            <li>Privacy</li>
+        </ul>
+    </div>
+</footer>
 
 </html>
