added the footer

--- a/index.html
+++ b/index.html
@@ -95,9 +95,16 @@
 </body>
 <footer>
     <div class="container-4">
-        <img src="images/logo.svg" class="company-logo" alt="company logo">
-        <p> Phone: +1-543-123-4567</p>
-        <p>example@fylo.com</p>
+        <img src="images/company-logo2.jpg" class="company-logo" alt="company logo">
+        <div class="telephone-contact">
+            <img src="images/tel-receiver-icon.jpg" class="tel-receiver-img" alt="telephone receiver icon">
+            <span> Phone: +1-543-123-4567</span>
+        </div>
+        <br>
+        <div class="email-contact">
+            <img src="images/email-icon.jpg" class="email-icon" alt="email icon">
+            <span> example@fylo.com</span>
+        </div>
         <ul class="container-4-ul1">
             <li>About Us</li>
             <li>Jobs</li>
@@ -109,7 +116,17 @@
             <li>Terms</li>
             <li>Privacy</li>
         </ul>
+        <div class="social-media-icons">
+            <div class="facebook">
+                <img src="images/facebook-icon.png" class="facebook-icon" alt="facebook-icon">
+            </div>
+            <div class="twitter">
+                <img src="images/twitter-icon.png" class="twitter-icon" alt="twitter-icon">
+            </div>
+            <div class="instagram">
+                <img src="images/insta-icon.png"  class="insta-icon" alt="insta-icon">
+            </div>            
+        </div>
     </div>
 </footer>
-
 </html>
