added a desktop design media query

--- a/index.html
+++ b/index.html
@@ -28,16 +28,24 @@
             </ul>
         </nav>
         <div class="container-1">
-            <img src="images/illustration-1.svg" class="container-1-img" alt="A file of information">
-            <h2 class="container-1-h2">All your files in one secure location, accessible anywhere.</h2>
-            <p class="container-1-p">
-                Fylo stores your most important files in one secure location.
-                Access them wherever you need, share and collaborate with friends, family, and co-workers.
-            </p>
-            <input type="email" placeholder="Enter your email..." class="email-request">
-            <button class="container-1-btn">
-                <a href="#">Get Started</a>
-            </button>
+            <div class="container-1a">
+                <img src="images/illustration-1.svg" class="container-1-img" alt="A file of information">
+            </div>
+            <div class="container-1b">
+                <h2 class="container-1-h2">All your files in one secure location, accessible anywhere.</h2>
+                <div class="container-1p">
+                    <p>
+                        Fylo stores your most important files in one secure location.
+                        Access them wherever you need, share and collaborate with friends, family, and co-workers.
+                    </p>
+                </div>
+                <div class="container-1ba">
+                    <input type="email" name="email" placeholder="Enter your email..." class="email-request">
+                    <button class="container-1-btn">
+                        <a href="#">Get Started</a>
+                    </button>
+                </div>
+            </div>
         </div>
         <div class="container-2">
             <div class="curve">
@@ -83,7 +91,7 @@
         <div class="container-3">
             <h3 class="container-3-h3">Get early access today</h3>
             <p class="container-3-p">
-                It only takes a minute to sign up and our free starter tier is extremely generous. 
+                It only takes a minute to sign up and our free starter tier is extremely generous.
                 If you have any questions, our support team would be happy to help you.
             </p>
             <input type="email" name="email" id="email-container3" placeholder="email@example.com">
@@ -124,9 +132,10 @@
                 <img src="images/twitter-icon.png" class="twitter-icon" alt="twitter-icon">
             </div>
             <div class="instagram">
-                <img src="images/insta-icon.png"  class="insta-icon" alt="insta-icon">
-            </div>            
+                <img src="images/insta-icon.png" class="insta-icon" alt="insta-icon">
+            </div>
         </div>
     </div>
 </footer>
+
 </html>
